# djangocms-simple-admin-style

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  build  minify-css  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: linters.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml
djangocms_simple_admin_style/static/djangocms_simple_admin_style/css/: dark-mode-compat.min.css  djangocms-simple-admin.css  djangocms-simple-admin.min.css
djangocms_simple_admin_style/static/djangocms_simple_admin_style/js/: update-notification.js
djangocms_simple_admin_style/templates/admin/: base_site.html
djangocms_simple_admin_style/templates/admin/inc/: cms_upgrade_notification.html
djangocms_simple_admin_style/templatetags/: admin_style_tags.py
private/: djangocms-simple-admin.css
